Finished ch2 part (note: need PostgreSQL and MSS)

--- a/diplomarbeit/erklaerung.tex
+++ b/diplomarbeit/erklaerung.tex
@@ -1,6 +1,5 @@
 \section*{Eidestattliche Erklärung}
-
-Hiermit erkläre ich, dass ich diese Arbeit selbstständig vefasst habe, dass ich die verwendeten Quellen und Hilfsmittel vollständig angegebenhabe und dass ich die Stellen der Arbeit - einschließlich Tabellen, Karten und Abbikdungen - die anderen Werken oder dem Internet im Wortlaut oder dem Sinn nach entnommen sind, auf jeden Fall unter Angabe der Quelle ans Entlehnung kenntlich gemacht habe.
+Ich erkläre an Eides statt, dass ich die vorliegende Diplomarbeit selbstständig und ohne fremde Hilfe verfasst, andere als angegeben Quellen und Hilfsmittel nicht benutzt und die benutzten Quellen wärtlich und inhaltlich entommenen Stellen als socle erkenntlich gemacht habe.
 
 \vspace{0.5cm}
 
