--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -60,6 +60,54 @@
     note = {Accessed on 23.03.2016}
 }
 
+@misc{MELD.CH2-noSQL.capTheoremComp, 
+    author = {Trilce Estrada},
+    year = {unkown},
+    title = {NoSQL DBMSes},
+    howpublished = "\url{http://www.cs.unm.edu/~estrada/files/05-nosql}",
+    note = {Accessed on 24.03.2016}
+}
+
+@misc{MELD.CH2-noSQL.sqlvsnosql, 
+    author = {Stefan Edlich},
+    year = {2011},
+    title = {List of NoSQL Databases},
+    howpublished = "\url{http://nosql-database.org/}",
+    note = {Accessed on 24.03.2016}
+}
+
+@misc{MELD.CH2-noSQL.listOfNoSQLDB, 
+    author = {Nisha Kanani},
+    year = {unkown},
+    title = {SQL vs NoSQL},
+    howpublished = "\url{http://www.ccs.neu.edu/home/kathleen/classes/cs3200/20-NoSQLMongoDB.pdf}",
+    note = {Accessed on 24.03.2016}
+}
+
+@misc{MELD.CH2-dbms.compRDBMS, 
+    author = {solidIT},
+    year = {2016},
+    title = {System Properties Comparison Microsoft SQL Server vs. MySQL vs. Oracle vs. PostgreSQL},
+    howpublished = "\url{http://db-engines.com/en/system/Microsoft+SQL+Server%3BMySQL%3BOracle%3BPostgreSQL}",
+    note = {Accessed on 24.03.2016}
+}
+
+@misc{MELD.CH2-dbms.compNoSQLInfo, 
+    author = {Ameya Nayak, Anil Poriya, Dikshay Poojary},
+    year = {2013},
+    title = {Type of NOSQL Databases and its Comparison with Relational Databases},
+    howpublished = "\url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.402.3372&rep=rep1&type=pdf}",
+    note = {Accessed on 24.03.2016}
+}
+
+@misc{MELD.CH2-dbms.compNoSQL, 
+    author = {Greg Burd},
+    year = {2011},
+    title = {NoSQL in Practice},
+    howpublished = "\url{http://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=87DB4795504228A7E48AFBF5645B1152?doi=10.1.1.230.9368&rep=rep1&type=pdf}",
+    note = {Accessed on 24.03.2016}
+}
+
 @conference{Carnot.Wirkungsgrad,
     author = {Prof. Dr. Karl-Heiz Kampert},
     booktitle = {Kreisprozesse},
