--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/nosql.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/nosql.tex
@@ -1,41 +1,11 @@
 \lfoot{Autor: Daniel Melichar}
-\subsubsection{Relationale Datenbanken}
-\label{subsec:relationaleDB}
-
-Die relationale Datenbank ist seit dem ersten Erscheinen in 1970 weit gekommen und ist von den meisten Großkonzernen der Welt adaptiert worden. Mit der eigens dafür entwickelten \textit{Programmiersprache} SQL (Structured Query Langauge) war das umgehen mit Datenbanken und Tabellen und der darin gespeicherten Information so einfach wie noch nie.
-
-\begin{figure}[!htb]\centering
-	\includegraphics[width=0.5\textwidth]{images/relationaleTabelle}
-	\caption{Beispiel einer relationalen Datenbank}
-\end{figure}
-
-Features von relationalen DBMS (Achtung: diese sind stark vom eigentlichem DBMS abhängig)
-\begin{itemize}
-\item Unterstützt eine große Menge an Daten
-\item Datensicherheit durch backups, permissions, etc.
-\item Fehler Toleranz und Wiederherstellung
-\end{itemize}
-
-Hinter den Kulissen sorgt das Relational Database Management System (RDBMS) dafür das die Eigenschaften des ACID (Atomicity, Consistency, Isolation, Durability) Prinzips der Transaktionen so funktionieren wie sie sollen. Beachtet man nun auch die anderen Features der Sprache, so wie Constraints (primary and foreign keys, Datentype, etc.) oder Stored Procedures/Functions, erkennt man schnell, dass je mehr Information eine relationale Datenbank enthält, desto langsamer wird sie.
-
-Einige der größten Limitierungen \cite{MELD.CH2-relationaleDB.rdbmsBuch} durch das relationale Datenbank Model sind
-\begin{itemize}
-\item Skalierbarkeit: ab einem gewissen Zeitpunkt muss die Datenbank über mehrere Server laufen da ein Server nicht mehr genügend Ressourcen verfügt um die Daten zu managen
-\item Komplexität: die Daten müssen zu Tabellen strukturiert werden; es ist also ein Schema notwendig
-\item Features: Meist für Datenintegrität aber nicht für Datenverarbeitung 
-\end{itemize}
-
-
-Zusammenfassed kann man also sagen, dass die Verwendung eines RDBMS dann sinn macht, wenn man ein Datenschema erstellen kann. Das bedeutet konkret: wenn man weiß welche Daten man hat und haben wird, wie man diese in eine Tabellen Struktur einbauen kann, und man Anforderungen die sich nur im geringen Maß ändern können ist es sinnvoll ein RDBMS zu verwenden. Die zur Verfügung gestellten Features werden einen Administrator sehr gut unterstützen. 
-
-
 \subsubsection{Nicht relationale Datenbanken (NoSQL)}
 \label{subsec:nichtrelationaleDB}
 
 In diesem Kapitel werden ein Einblick in das Konzept von nicht-relationalen Datenbanken gegeben. Es wird nicht über die ersten Systeme gesprochen die damals dem NoSQL-Movement angehörten (Objekt-Datenbanken, XML-Datenbanken, Datenbanken für spezielle Anwendungsgebiete wie Analyse oder Streamprozessoren) diese sollten aber zumindest erwähnt werden.
 
-\paragraph{Motive und Beweggründe}
-Der Term \textit{NoSQL} wurde erstmalig in 1998 für eine relationale Datenbank, welche ohne der SQL-Sprache funktioniert, verwendet\cite{MELD.CH2-noSQL.firstSQLNaming}. Der Term wurde dann wieder in über die Jahre von verschiedensten Leuten aufgenommen. Unglücklicherweise gab es keine definitive Beschränkung für welche Datenbanksysteme zum NoSQL-Movement gehören. Durch den Blogger und Rackspace Mitarbeiter, Eric Evans, ist der Term ganz besonders bekannt geworden – er sagte hierzu: \cite[\textit{“the whole point of seeking alternatives is that you need to solve a problem that relational databases are a bad fit for”}]{MELD.CH2-noSQL.whatsInAName}
+\paragraph{Motive und Beweggründe\newline}
+Der Term \textit{NoSQL} wurde erstmalig in 1998 für eine relationale Datenbank, welche ohne der SQL-Sprache funktioniert, verwendet\cite{MELD.CH2-noSQL.firstSQLNaming}. Der Term wurde dann wieder in über die Jahre von verschiedensten Leuten aufgenommen. Unglücklicherweise gab es keine definitive Beschränkung für welche Datenbanksysteme zum NoSQL-Movement gehören. Durch den Blogger und Rackspace Mitarbeiter, Eric Evans, ist der Term ganz besonders bekannt geworden – er sagte hierzu: \cite[\textit{“the whole point of seeking alternatives is that you need to solve a problem that relational databases are a bad fit for”}]{MELD.CH2-noSQL.whatsInAName}. NoSQL Datenbanken wurden hauptsächlich von Großkonzernen für den Eigenbedarf entwickelt (Amazon’s Dynamo, Google’s BigTable, LinkedIn’s Voldemort, Facebook’s Cassandra, Yahoo!’s PNUTS). Diese Großkonzerne haben den relationalen Ansatz nicht komplett verworfen, sie fanden lediglich, dass das Model nicht den Anforderungen entspricht\cite{MELD.CH2-noSQL.capTheoremComp}.
 
 Das bekannte IT und Technologie Magazine \textit{Computerworld} hat in 2009 bei einer NoSQL Konferenz in San Franciso die dort vorhanden Developer befragt wieso NoSQL gegenüber relationalen Datenbanken im Vorteil liegt\cite{MELD.CH2-noSQL.whyItsBetter}.
 
@@ -81,7 +51,6 @@ Das von Eric Brewer im Jahre 2000 entwickelte CAP-Theorem ist heutzutage in viel
 
  Brewer behauptet, dass man nur zwei von diesen drei Eigenschaften in einem \textit{shared-data system} haben kann\cite{MELD.CH2-noSQL.capTheorem}. In seiner Präsentation hat er über die Vor- und Nachteile von ACID und BASE Systemen (siehe nächsten Paragraph) geredet und einige Entscheidungskriterien vorgestellt um sich für eine der beiden Modelle zu entscheiden: wenn ein System, oder Teile eines Systems, konsistent und Partition-Tolerant sein müssen, sind ACID Eigenschaften benötigt; wenn Verfügbarkeit und Partition-Tolerants benötigt werden, sollte das System mittels BASE Eigenschaften erstellt werden. Anhand folgender Tabelle, welche direkt aus seiner Präsentation genommen wurde, lässt es sich am besten veranschaulichen.
 
-
 \begin{table}[!htb]
 \centering
 \begin{tabular}{|l|l|l|}
@@ -94,13 +63,35 @@ Availability   + Partition tolerance & \begin{tabular}[c]{@{}l@{}}expirations/le
 \caption{CAP-Theorem – Alternatives, Traits, Examples \cite{MELD.CH2-noSQL.capTheorem}}
 \end{table}
 
-\tab\textbf{ACID vs BASE}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+Grundsätzlich kann man sagen, dass bei relationalen Datenbanken weniger Availability herscht als bei der NoSQL Variante. Beide Systeme verfügen jedoch über Partition Tolerance\cite{MELD.CH2-noSQL.capTheoremComp}
+
+\begin{figure}[!htb]\centering
+	\includegraphics[width=0.8\textwidth]{images/capTheorem}
+	\caption{CAP-Theorem bei RDBMS und NoSQL\cite{MELD.CH2-noSQL.capTheoremComp}}
+\end{figure}
+
+\tab\textbf{ACID vs BASE\newline}
+Das Internet erzeugt Tag für Tag für eine enorme Menge an Daten welche verarbeitet, analysiert und bereitgestellt werden müssen. Die Applikationen und Service in diesem Bereich müssen den individuellen Bedarf an Performance, Zuverlässigkeit, Betriebsbereitschaft, und Konsistenz feststellen. Wie bereits beim CAP-Theorem beschrieben können diese Applikationen und Service nur zwei Optionen von Consistency, Availability, und Partition Tolerance, genommen werden. Immer mehr Applikationen und Service bevorzugen die Option von Availability und Partition Tolerance und vernachlässigen somit die strikte Toleranz. Diese Eigenschaften sind schwer mit dem ACID Model zu erreich, jedoch wurde dafür das BASE Model entwickelt. Es gibt kein Model das besser ist, man muss das richtige Model für seine Bedürfnisse wählen.
+
+Das Akronym BASE steht für folgende Eigenschaften
+\begin{itemize}
+	\item Basically Available
+	\item Soft-state
+	\item Eventual consistency
+\end{itemize}
+
+Brewer stellt den Vergleich zwischen ACID und BASE mit der Darstellung, welche man in der Tabelle sehen kann. Es ist jedoch zu beachten das diese beiden Konzepte sich nicht aufheben sollen, sondern ein großes Spektrum an Möglichkeiten bieten sollen. 
+
+\begin{table}[!htb]
+\centering
+\label{acidvsbaseTable}
+\begin{tabular}{|l|l|}
+\hline
+\multicolumn{1}{|c|}{\textbf{ACID}} & \multicolumn{1}{c|}{\textbf{BASE}} \\ \hline
+\begin{tabular}[c]{@{}l@{}}Strong consistency \\ Isolation \\ Focus on “commit” \\ Nested transactions \\ Availability? \\ Conservative (pessimistic) \\ Difficult evolution (e.g. schema)\end{tabular} & \begin{tabular}[c]{@{}l@{}}Weak consistency – stale data OK \\ Availability first\\ Best effort \\ Approximate answers OK \\ Aggressive (optimistic)\\ Simpler!\\ Faster \\ Easier evolution\end{tabular} \\ \hline
+\end{tabular}
+\caption{ACID vs BASE \cite{MELD.CH2-noSQL.capTheorem}}
+\end{table}
 
 \tab\textbf{Partitionierung}
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -126,20 +117,33 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-\paragraph{Kritik}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \nextline
+\paragraph{Kritik\newline}
+Selbstverständlich gibt es nicht nur positive Dinge über NoSQL. Auch nicht relationale Systeme haben einige Punkte in welchen es noch Verbesserungsbedarf gibt \cite{MELD.CH2-noSQL.sqlvsnosql}. 
 
-\paragraph{Klassifikation und Vergleich von NoSQL Datenbanken}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \nextline
+\begin{itemize}
+	\item \textbf{Vortschritt\\}
+	Relationale Datenbanken existierten schon um einige Jahre länger als die NoSQL Variante. Die Zielsetzung von RDBMS ist es stabil und verlässlich zu sein - was teilweise auch bedeutet, dass es wenige neue Innovationen gibt. Hingegen gibt es noch einige NoSQL Datenbanksysteme die ein Basis Feature-Set entwickeln müssen.
 
-\clearpage % DO NOT REMOVE
+	\item \textbf{Support\\}
+	Auch hier spielt die etwas längere Lebensdauer von RDBMS eine große Rolle. Solche Namen wie \textit{MySQL, PostgreSQL, Microsoft SQL Server} sind sehr bekannt in der IT Welt. Die Entwickler dieser Systeme setzen auch auf einen guten Support, wobei dieser oft nur for Enterprise Editions zur Verfügung steht. Hingegen sind die meisten NoSQL Datenbanken Open Source, und haben daher meist nur Community Support. Ob dieser Ansatz gut oder schlecht ist eine Ansichtssache von Open Source Projekten.
+
+	\item \textbf{Administration\\}
+	Der wahrscheinlich größte negative Aspekt von NoSQL ist die eigentliche Administration. Es wird zwar oft gesagt, dass NoSQL keine administrativen Tätigkeiten benötigt, in den meisten Fällen muss aber trotzdem hin und wieder an der Datenbank gefeilt werden. Bei relationalen Datenbanken gibt es durch Einsatz von Persmissions, Rollen, und durch das ACID-Model weit aus einfache administrative Möglichkeiten.
+
+	\item \textbf{Fehlende Standardisierung\\}
+	Bei relationalen Datenbanken gibt es zwar auch eine einheitliche Programmiersprache die prinzipiell für alle DBMS funktioniert, aber auch hier gibt es verschiedene Dialekte. Bei NoSQL Datenbanken ist es dem Entwickler überlassen wie er mit der Datenbank kommunizieren will. In den meisten Fällen wird JavScript verwendet, es kann aber auch eine eigene, komplett neue Programmier- oder Skriptsprache sein.
+\end{itemize}
+
+\paragraph{Klassifikation von NoSQL Datenbanken\newline}
+Zum Zeitpunkt der Erstellung dieses Dokuments gibt es weit über zweihundert NoSQL Datenbanken\cite{MELD.CH2-noSQL.listOfNoSQLDB}. All diese Datenbanken können in vier Kategorien eingeteilt werden:
+
+\begin{itemize}
+	\item Key-Value Stores
+	\item Column-Oriented Databases
+	\item Document Databases
+	\item Graph Stores
+\end{itemize}
+
+Für eine detailierte Beschreibung, Anwendungsfälle, und Vergleiche, siehe Sektion \ref{subsec:dbms}
+
+\clearpage
