--- a/diplomarbeit/sections/ch3_implementierung/daten-management-analyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/daten-management-analyse.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Daniel Melichar}
 \subsection{Datenmanagement und Datenanalyse}
+\label{subsec:datenmanagementimpl}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
