--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -108,29 +108,33 @@
     note = {Accessed on 24.03.2016}
 }
 
-@conference{Carnot.Wirkungsgrad,
+@misc{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad,
     author = {Prof. Dr. Karl-Heiz Kampert},
-    booktitle = {Kreisprozesse},
+    title = {Kreisprozesse},
     organisation = {Universität Wuppertal},
     title = {Kreisprozesse},
-    year = {2013}
+    year = {2013},
+    howpublished="\url{http://astro.uni-wuppertal.de/~kampert/BI/kap36/Kap36.pdf}",
+    note = {Accessed on 20.03.2016}
 }
 
-@misc{LowBudget.CarPC,
+@misc{SIMR.CH1-Fahrstil-Analyse.LowBudgetCarPC,
     title = {Low Budget CarPC},
     howpublished="\url{http://mechlab-engineering.de/references/low-budget-car-pc/}",
     year = {2014},
     note = {Accessed on 20.03.2016}
 }
     
-@techreport{Businessplan.Runtastic,
+@misc{SIMR.CH1-Fahrstil-Analyse.BusinessplanRuntastic,
     title={Businessplan Runtastic},
     institution={Runtastic GmbH},
     year={2009},
-    author={Florian Gschwandtner, MSc}
+    author={Florian Gschwandtner, MSc},
+    howpublished="\url{https://www.gruenderservice.at/Content.Node/gruenden/Businessplan/Plan4You/Businessplan_runtastic.pdf}",
+    note = {Accessed on 20.03.2016}
 }
 
-@misc{SAE.J1962,
+@misc{SIMR.CH2-CAN-Bus.SAEJ1962,
     title={SAE J1962},
     year={1992-2015},
     publisher={SAE International},
@@ -138,7 +142,7 @@
     note={Accessed on 20.03.2016}
 }
 
-@misc{AU.Motor.Vehicle.Standards.Act.1989,
+@misc{SIMR.CH2-CAN-Bus.AU-MVSA1989,
     title={Vehicle Standard (Australian Design Rule 79/01 — Emission Control for Light Vehicles) 2005},
     year={2005},
     publisher={Australian Government},
@@ -146,7 +150,7 @@
     note={Accessed on 20.03.2016}
 }
 
-@misc{Directive.98/69/EC.EUParliament,
+@misc{SIMR.CH2-CAN-Bus.EUP-D98/69/EC,
     title={Directive 98/69/EC of the European Parliament and of the Council of 13 October 1998 relating to measures to be taken against air pollution by emissions from motor vehicles and amending Council Directive 70/220/EEC},
     year={2000},
     publisher={European Parliament},
@@ -154,7 +158,7 @@
     note={Accessed on 20.03.2016}
 }
 
-@misc{OBDII.TypeA,
+@misc{SIMR.CH2-CAN-Bus.OBDIITypeA,
     author = {SAE International},
     title = {OBD II Typ A Masszeichnung},
     year = {1992},
@@ -162,7 +166,7 @@
     howpublished="\url{http://www.obdtester.com/images/j1962f_type_a.gif}"
 }
 
-@misc{OBDII.TypeB,
+@misc{SIMR.CH2-CAN-Bus.OBDIITypeB,
     author = {{SAE International}},
     title = {OBD II Typ B Masszeichnung},
     year = {1992},
@@ -170,7 +174,7 @@
     howpublished="\url{http://www.obdtester.com/images/j1962f_type_b.gif}"
 }
 
-@misc{Schaltempfehlung,
+@misc{SIMR.CH1-Fahrstil-Analyse.Schaltempfehlung,
     author = {{Auto Zeitung}},
     title = {Sprit Sparen, Schaltempfehlung 10. Paragraph},
     year = {2015},
@@ -178,7 +182,7 @@
     howpublished="\url{http://www.autozeitung.de/tipps-tricks/sprit-sparen-autofahren}"
 }
 
-@misc{Torque.Pro,
+@misc{SIMR.CH1-Fahrstil-Analyse.TorquePro,
     author = {{Ian Hawkins}},
     title = {Torque Pro (OBD2 / Auto)},
     year = {2016},
@@ -186,7 +190,7 @@
     howpublished="\url{http://torque-bhp.com}"
 }
 
-@misc{Golf.OBD,
+@misc{SIMR.CH2-CAN-Bus.GolfOBD,
     author = {{National Center for Automotive Science \& Technology at Weber State University}},
     title = {Golf VI OBD Position},
     year = {unknown},
@@ -194,7 +198,7 @@
     howpublished="\url{http://www.obdclearinghouse.com/OBD-CH/documents/newdocuments/volkswagen/golf/2002.jpg}"
 }
 
-@misc{Polo.OBD,
+@misc{SIMR.CH2-CAN-Bus.PoloOBD,
     author = {{Arturo R Montesinos}},
     title = {Polo IV 9N3 OBD Position},
     year = {2011},
@@ -202,10 +206,26 @@
     howpublished="\url{https://www.flickr.com/photos/armk/5578899043}"
 }
 
-@misc{3er.OBD,
+@misc{SIMR.CH2-CAN-Bus.3erOBD,
     author = {{Matt Shannahan (tahoerdr)}},
     title = {BMW 3er E90 OBD Position},
     year = {unknown},
     note = {Online; accessed 22.03.2016},
     howpublished="\url{http://i8.photobucket.com/albums/a47/tahoerdr/E90Post/MattShannahanIDDocs006.jpg}"
+}
+
+@misc{SIMR.CH1-Fahrstil-Analyse.GTRMultifunc,
+	author = {Jesus Diaz},
+	title={Nissan GT-R Multifunction Display Looks Like a PlayStation Game},
+	year={2007},
+	howpublished = "\url{http://gizmodo.com/313871/nissan-gt-r-multifunction-display-looks-like-a-playstation-game}",
+	note = {Accessed on 27.03.2016}
+}
+
+@misc{SIMR.CH1-Fahrstil_Analyse.EUVerordCO2,
+	title={Verordnung (EG) Nr. 443/2009 des Europ{\"a}ischen Parlaments und des Rates vom 23. April 2009 zur Festsetzung von Emissionsnormen f{\"u}r neue Personenkraftwagen im Rahmen des Gesamtkonzepts der Gemeinschaft zur Verringerung der CO 2-Emissionen von Personenkraftwagen und leichten Nutzfahrzeugen},
+	author={Parlament, Europ{\"a}isches and DER RAT DER EUROP{\"A}ISCHEN, UNION},
+	howpublished="\url{http://www.bmub.bund.de/fileadmin/bmu-import/files/pdfs/allgemein/application/pdf/eu_verordnung_co2_emissionen_pkw.pdf}",
+	note = {Accessed on 27.03.2016}
+	year={2009}
 }
