--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -6,7 +6,7 @@ CO_{2} wird umgangssprachlich Kohlenstoffdioxid genannt und ist die zusammengese
 Die charkteristischen Eigenschaften von CO_{2} sind Unsichtbarkeit und Geruchslosigkeit. 
 In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle, da beispielsweise der Mensch CO_{2} ausatmet. 
 Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. 
-In der freien Luft werden diese Kohlenstoffpartikel zu CO_{2}. \comment{SIMR: Durch Frischluft werden diese Kohlenstoffpartikel zu CO_{2}. Was dir halt besser gefällt}
+In der freien Luft werden diese Kohlenstoffpartikel zu CO_{2}.
 CO_{2} ist Reaktionsträge und besitzt keine giftige Eigenschaft. 
 Das Problem mit den Unmengen an ausgestoßenem CO_{2} ist, dass sein massives Vorkommen die Atmosphäre beschädigt.
 
@@ -15,9 +15,9 @@ Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen
 (wie zum Beispiel Diesel, Flüssiggas, Benzin und auch Biotreibstoff), erzeugen Kohlenstoff als Abgas. 
 Indem der Motor den Kraftstoff zusammen mit Luftsauerstoff verbrennt, gelangt das CO_{2} über die Abgasanlage in die Atmosphäre. 
 Eine effektive Methode zur Beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. 
-Der benutzte Kraftstoff bestimmt, wie viel CO_{2} bei der Verbrennung erzeugt wird. \comment{SIMR: statt erzeugt wird - als Nebenprodukt entsteht?}
+Der benutzte Kraftstoff bestimmt, wie viel CO_{2} bei der Verbrennung als Nebenprodukt entsteht.
 Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.
-Der Kraftstoffverbrauch eines Wagens und sein CO_{2}-Output stehen daher in enger Verbindung. \comment{SIMR: Kraftfahrzeug statt Wagen? Wagen könnte als Pferdekutsche missverstanden werden.}
+Der Kraftstoffverbrauch eines Kraftfahrzeugs und sein CO_{2}-Output stehen daher in enger Verbindung.
 Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. 
 Heutzutage spricht man von der Einheit Gramm pro Kilometer [g/km] als normierte Verbrauchsmessung.
 Der Lenker eines PKW hat natürlicherweise Einfluss auf seinen CO_{2}-Ausstoß. 
@@ -32,13 +32,16 @@ nennt sich Treibhauseffekt.
 Der Treibhauseffekt ist eine der Hauptursachen für den Klimawandel, welcher drastische Folgen für Natur, Tiere und Menschen hat. 
 Zu viel CO_{2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
 den Anstieg der Meerestemperatur, den Anstieg des Meeresspiegels, 
-Aussterben von Pflanzen und Tieren und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc. \comment{SIMR: Den Satz würd ich zweiteilen. Einmal Natur Folgen (steigender Meeressspiegel,...) und dann Fauna Folgen (warme Winter,...)}
-
+Aussterben von Pflanzen und Tieren und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc.
+Das Kohlenstoffdioxid steigt bis zur Atmosphäre auf und bildet dort eine "Mauer".
+Sonnenstrahlen können zwar ohne weiteres durch, doch nicht so leicht wieder raus. Das heisst, dass die Sonnenstrahlen,
+die von der Erdoberfläche wieder zurück in den Weltraum reflektiert werden sollten, von der Erdatmosphäre zurück auf die Erde geworfen werden. 
+ 
 \textbf{Das Kyoto-Protokoll}
 Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
 Dieses Protokoll war der Startschuss für die Suche nach erneuerbaren Energien. 
 Anfang 2015 sind Gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/CO_{2} pro kilometer limitierten. 
-Bis 2020 soll dieses Limit auf 95g/CO2 pro Kilometer herunter gesetzt werden.
+Bis 2020 soll dieses Limit auf 95g/CO2 pro kilometer herunter gesetzt werden.
 
 
 
