--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -11,6 +11,14 @@
 	note = {Accessed on 05.10.2014}
 }
 
+@misc{BOZH.ch1-co2-umwelt.treibhaus1, 
+	author = {unknown},
+	year = {2014},
+	title = {Der Treibhauseffekt},
+	howpublished = "\url{http://www.klimafit.at/de/ausgabe_3_volksschule/der_treibhauseffekt}",
+	note = {Accessed on 28.03.2016}
+}
+
 @conference{Carnot.Wirkungsgrad,
     author = {Prof. Dr. Karl-Heiz Kampert},
     booktitle = {Kreisprozesse},
